--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ display: block !important; position: static;}
                <a class="btn-close"><i class="fa fa-times"></i></a>
                <ul>
                    <li><a href="index.html">Home</a></li>
-                   <li><a href="http://sisteminfo.local.s3-website-us-east-1.amazonaws.com">Loja</a></li>
+                   <li><a href="https://sistemsite.herokuapp.com/">Loja</a></li>
                    <li><a href="quemsomos.html">Quem somos</a></li>
                    <li><a href="contato.html">Contato</a></li>
                </ul>
