--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ display: block !important; position: static;}
            <nav class="menu">
                <a class="btn-close"><i class="fa fa-times"></i></a>
                <ul>
-                   <li><a href="index.html">Home</a></li>
+                   <li><a href="index.html">inicio</a></li>
                    <li><a href="https://sistemsite.herokuapp.com/">Loja</a></li>
                    <li><a href="quemsomos.html">Quem somos</a></li>
                    <li><a href="contato.html">Contato</a></li>
