--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta name="description" content="Agência especializada em Marketing Digital, Criação de Sites e Aplicativos Mobile.">
       <meta name="keywords" content="Agência digital, Marketing, Sites">
       <meta name="robots" content="index, follow">
-      <meta name="author" content="Robério Maciel">
+      <meta name="author" content="Robério Maciel de Almeida">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
       <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
       <link rel="icon" href="img/icon.png">
